<resources>
    <string name="app_name">BirthdayBuzz</string>
    <string name="events_info">Events Info</string>
    <string name="reservation">Reservation</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="profile1">Profile</string>
    <string name="activities">Activities</string>
</resources>